# newhope

./: Cargo.toml
src/: lib.rs  poly.rs  poly_simple.rs  simple.rs
tests/: newhope_simple_test.rs
