[package]
name = "newhope"
version = "0.3.0"
authors = ["quininer kel <quininer@live.com>"]
description = "Post-quantum key exchange - a new hope."
repository = "https://github.com/quininer/newhope"
license = "MIT"

[dependencies]
rand = "0.4"
tiny-keccak = "^1.4"
chacha = "^0.2"
byteorder = "1.0"
clear_on_drop = "0.2.3"

[dev-dependencies]
rand = "^0.4.2"
rustc-serialize = "0.3"
byteorder = "1.2.7"

[features]
tor = []
